2008-12-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_pubsub/node_default.erl, src/mod_pubsub/node_pep.erl: Fix
	acl:match_rule/3 call. It takes a #jid record, not a short JID.

2008-12-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_receiver.erl, src/mod_offline_odbc.erl,
	src/mod_vcard_odbc.erl, src/mod_private_odbc.erl, src/jd2ejd.erl:
	Update Exmpp XML parser options.

	* src/gen_iq_handler.erl: Add the module and function names to the
	error message, when a module crash.

	* src/mod_pubsub/mod_pubsub.erl, src/mod_pubsub/nodetree_default.erl,
	src/mod_pubsub/node_default.erl, src/mod_pubsub/node_pep.erl: First
	pass of Exmpp conversion for mod_pubsub. Several modules aren't
	converted yet. Existent Mnesia tables written to disc are not
	updated. There must be bugs, mostly because of the mix between #jid
	record and short JIDs.

2008-12-03  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_proxy65/mod_proxy65_stream.erl,
	src/mod_proxy65/mod_proxy65_service.erl: Convert mod_proxy65 to exmpp.

2008-12-01  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1649 to r1692).

	* src/ejabberd_frontend_socket.erl: Fix two warnings about unused
	variables.

2008-11-28  Alexey Shchepin  <alexey@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Clean user activity after timeout
	(EJAB-804)

2008-11-26  Badlop  <badlop@process-one.net>

	* src/ejabberdctl.template: Fix detection of ejabberdctl.cfg path

	* src/mod_irc/mod_irc.erl: Announce disco#info (thanks to Spike)
	* src/mod_muc/mod_muc.erl: Announce disco#info disco#items
	* src/mod_proxy65/mod_proxy65_service.erl: No announce disco#items
	* src/mod_pubsub/mod_pubsub.erl: Announce disco#info disco#items
	* src/mod_vcard.erl: Announce disco#info

	* src/gen_mod.erl: First store module options in ETS and Mnesia,
	then start the module. In case of failure, remove options from
	ETS. Until now the module was started before the options were